--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <a [routerLink]="['/']">主页</a>
-<a [routerLink]="['/product',1]" >商品详情</a>
-<button type="button" value="商品详情" (click)="toProductDetails()" >商品详情</button>
+<a [routerLink]="['/product',1]">商品详情</a>
+<button type="button" value="商品详情" (click)="toProductDetails()">商品详情</button>
+<a [routerLink]="[{outlets:{primary:'home',aux:'chat'}}]">开始聊天</a>
+<a [routerLink]="[{outlets:{aux: null}}]">结束聊天</a>
+<hr>
 <router-outlet></router-outlet>
+<router-outlet name="aux"></router-outlet>
